--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			<span class="icon-menu" id="btnmenu"> </span>	
 			<ul class="menu" id="menu">
 				<li class="menu__item"><a href="index.html" class="menu__link menu__link--select">Inicio</a></li>
-				<li class="menu__item"><a href="Nosotros.html" class="menu__link">Nosotros</a></li>
-				<li class="menu__item"><a href="Galeria.html" class="menu__link">Programas sociales </a>
+				<li class="menu__item"><a href="nosotros.html" class="menu__link">Nosotros</a></li>
+				<li class="menu__item"><a href="galeria.html" class="menu__link">Programas sociales </a>
 				</li>
 				<li class="menu__item"><a href="noticias.html" class="menu__link">Noticias Actuales </a></li>
 				<li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
