--- a/galeria.html
+++ b/galeria.html
@@ -77,7 +77,7 @@
 			</P>	
 			</div>
 			<div class="column column--50-25">
-				<img src="img/pequeño2.JFIF" class="today-special__img">
+				<img src="img/pequeño2.jfif  " class="today-special__img">
 			<div class="today-special__title">Jovenes en Acción</div>
 			<p> <a href="subsidios/jovenesenaccion.html" target="_blank"  class="today-special__price">Click aqui </a> </p>
 			<P>
@@ -93,7 +93,7 @@
 			</P>		
 			</div>	
 			<div class="column column--50-25">
-				<img src="img/pequeño4.PNG" class="today-special__img">
+				<img src="img/pequeño4.png" class="today-special__img">
 			<div class="today-special__title">Ingreso Solidario</div>
 			<p> <a href="subsidios/ingresosolidario.html" target="_blank"  class="today-special__price">Click aqui </a> </p>	
 			<P>
