--- a/actualidad/familiasenaccion1.html
+++ b/actualidad/familiasenaccion1.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<title>Noticias | Ayudas Colombia</title>
 	<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0">
-	<link rel="stylesheet" media="only screen and (max-width: 1024px)" href="css/estilos.css">
+	<link rel="stylesheet" media="only screen and (max-width: 1024px)" href="../css/estilos.css">
 	<link rel="stylesheet" type="text/css" href="../css/galeria.css">
 	<link rel="stylesheet" type="text/css" href="../css/subsidios/viviendaconcurrente.css">
 
@@ -41,8 +41,8 @@
 			<span class="icon-menu" id="btnmenu"> </span>	
 			<ul class="menu" id="menu">
 				<li class="menu__item"><a href="../index.html" class="menu__link ">Inicio</a></li>
-				<li class="menu__item"><a href="../Nosotros.html" class="menu__link ">Nosotros</a></li>
-				<li id="navd" class="menu__item container-submenu"><a href="../Galeria.html" class="menu__link submenu-btn">Programas Sociales </a>
+				<li class="menu__item"><a href="../nosotros.html" class="menu__link ">Nosotros</a></li>
+				<li id="navd" class="menu__item container-submenu"><a href="../galeria.html" class="menu__link submenu-btn">Programas Sociales </a>
 					<ul class="navd submenu">
 					</ul>
 				</li>
@@ -189,8 +189,8 @@
 	</div>
 	
 </footer>
-<script  src="js/menu.js"></script>
-<script  src="js/modal.js"></script>
+<script  src="../js/menu.js"></script>
+<script  src="../js/modal.js"></script>
 
 </body>
 </html>
