--- a/subsidios/familiasenaccion.html
+++ b/subsidios/familiasenaccion.html
@@ -41,8 +41,8 @@
 			<span class="icon-menu" id="btnmenu"> </span>	
 			<ul class="menu" id="menu">
 				<li class="menu__item"><a href="../index.html" class="menu__link ">Inicio</a></li>
-				<li class="menu__item"><a href="../Nosotros.html" class="menu__link ">Nosotros</a></li>
-				<li id="navd" class="menu__item container-submenu"><a href="../Galeria.html" class="menu__link submenu-btn">Programas Sociales </a>
+				<li class="menu__item"><a href="../nosotros.html" class="menu__link ">Nosotros</a></li>
+				<li id="navd" class="menu__item container-submenu"><a href="../galeria.html" class="menu__link submenu-btn">Programas Sociales </a>
 					<ul class="navd submenu">
 						
 
