--- a/subsidios/viviendasocial.html
+++ b/subsidios/viviendasocial.html
@@ -191,7 +191,7 @@
 				
 			</div>
 			<div class="column column--50-25">
-				<img src="../img/pequeño2.JFIF" class="today-special__img">
+				<img src="../img/pequeño2.jfif " class="today-special__img">
 			<div class="today-special__title">Jovenes en Acción</div>
 			<p> <a href="../subsidios/jovenesenaccion.html" target="_blank"  class="today-special__price">Click aqui </a> </p>
 					
