--- a/noticias.html
+++ b/noticias.html
@@ -90,7 +90,7 @@
 			<div class="column column--50-25">
 				<img src="img/noticias/sisben1.png" class="today-special__img">
 			<div class="today-special__title">¿Qué hace el DNP y qué tiene que ver con el Sisbén?</div>
-			<p> <a href="actualidad/Sisben1.html" target="_blank"  class="today-special__price">Click aqui </a> </p>
+			<p> <a href="actualidad/sisben1.html" target="_blank"  class="today-special__price">Click aqui </a> </p>
 				
 			</P>		
 			</div>	
