--- a/nosotros.html
+++ b/nosotros.html
@@ -93,13 +93,13 @@
 		<div class=" container container--flex">
 			<span class="icon-menu" id="btnmenu"> </span>	
 			<ul class="menu" id="menu">
-				<li class="menu__item"><a href="index.html" class="menu__link ">Inicio</a></li>
-				<li class="menu__item"><a href="nosotros.html" class="menu__link menu__link--select">Nosotros</a></li>
-				<li class="menu__item"><a href="programas-sociales.html" class="menu__link">Programas Sociales </a>
+				<li class="menu__item"><a href="index" class="menu__link ">Inicio</a></li>
+				<li class="menu__item"><a href="nosotros" class="menu__link menu__link--select">Nosotros</a></li>
+				<li class="menu__item"><a href="programas-sociales" class="menu__link">Programas Sociales </a>
 					
 				</li>
-				<li class="menu__item"><a href="noticias.html" class="menu__link">Noticias Actuales</a></li>
-				<li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
+				<li class="menu__item"><a href="noticias" class="menu__link">Noticias Actuales</a></li>
+				<li class="menu__item"><a href="contacto" class="menu__link">Contacto</a></li>
 				
 			</ul>
 			<div class="social-icon">
