--- a/noticias.html
+++ b/noticias.html
@@ -107,14 +107,14 @@
 		<div class=" container container--flex">
 			<span class="icon-menu" id="btnmenu"> </span>	
 			<ul class="menu" id="menu">
-				<li class="menu__item"><a href="index.html" class="menu__link ">Inicio</a></li>
-				<li class="menu__item"><a href="nosotros.html" class="menu__link ">Nosotros</a></li>
-				<li id="navd" class="menu__item container-submenu"><a href="programas-sociales.html" class="menu__link submenu-btn">Programas Sociales </a>
+				<li class="menu__item"><a href="index" class="menu__link ">Inicio</a></li>
+				<li class="menu__item"><a href="nosotros" class="menu__link ">Nosotros</a></li>
+				<li id="navd" class="menu__item container-submenu"><a href="programas-sociales" class="menu__link submenu-btn">Programas Sociales </a>
 					<ul class="navd submenu">
 					</ul>
 				</li>
-				<li class="menu__item"><a href="noticias.html" class="menu__link menu__link--select">Noticias Actuales </a></li>
-				<li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
+				<li class="menu__item"><a href="noticias" class="menu__link menu__link--select">Noticias Actuales </a></li>
+				<li class="menu__item"><a href="contacto" class="menu__link">Contacto</a></li>
 				
 			</ul>
 			<div class="social-icon">
